# ScaleChipletThesis

./: README.md
ScaleChiplet-Compile/: .gitignore  CMakeLists.txt  README.md  build-scalechiplet.sh
ScaleChiplet-Compile/include/scale-chiplet/: InitAllDialects.h  InitAllPasses.h
ScaleChiplet-Compile/lib/Transforms/: AnnotateTaskDAG.cpp  CMakeLists.txt  CostAnnotate.cpp  CreateChipletFromTosa.cpp  EvenClusterTasks.cpp  FuseLayoutChains.cpp  FuseTrivialConsts.cpp  FuseTrivialLayouts.cpp  InsertChipletSendRecv.cpp  LegalizeAddBias.cpp  LegalizeDepthwiseTail.cpp  LegalizeTransformerTail.cpp  MaterializeChiplets.cpp  MergeClusterTasks.cpp  NormalizeTaskOperands.cpp  Passes.cpp  PruneDeadTaskYields.cpp  TosaConvPoolFusion.cpp
ScaleChiplet-Compile/scripts/: fix_torchmlir_format.py  run_scalechiplet_flow.sh  split_chiplets_mlir.sh  split_mlir_funcs.sh  torchmlir_to_scalechiplet_ready.py  verify_chiplets_split.py
ScaleChiplet-Compile/tools/: CMakeLists.txt
ScaleChiplet-Compile/tools/scale-chiplet-opt/: CMakeLists.txt  scale-chiplet-opt.cpp
gpt2pipeline/3prompt/: .gitignore  build_all_xo.sh  link_300mhz.sh  ref_round_trace.py  run_all_csynth.sh  system.cfg  verify_host_bank_layout.py
gpt2pipeline/3prompt/chip0/: csynth.tcl  (+4 more)
gpt2pipeline/golden/: newest_gpt2_medium.cpp
gpt2pipeline/golden-mlir/: chunk0.mlir  chunk0_attn_lowered.mlir  chunk1.mlir  chunk1_ffn_up_lowered.mlir  chunk2.mlir  chunk2_ffn_down_lowered.mlir
gpt2pipeline/onboards/: host_gpt2_medium_2prompt_arb  host_gpt2_medium_2prompt_arb.cpp  host_gpt2_medium_3prompt_arb  host_gpt2_medium_3prompt_arb.cpp
(+57 files in other folders)
